# plateviz

./: .gitignore  LICENSE  README.md  pyproject.toml
src/plateviz/: __init__.py  plateviz.py
src/plateviz/resources/: Goldilocks.json  example_data.txt
