[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plateviz"
version = "0.1"
authors = [
  { name="Rudra Kalra", email="rudrakalra20@gmail.com" },
]
description = "An interactive visualization tool for microplate reader growth data."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 4 - Beta",
]

[tool.setuptools.package-data]
plateviz = ["*.json", "*.txt", "resources/*"]